--- a/preseed.cfg
+++ b/preseed.cfg
@@ -67,13 +67,13 @@ d-i netcfg/choose_interface select auto
 # Any hostname and domain names assigned from dhcp take precedence over
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
-d-i netcfg/get_hostname string unassigned-hostname
-d-i netcfg/get_domain string unassigned-domain
+d-i netcfg/get_hostname string
+d-i netcfg/get_domain string
 
 # If you want to force a hostname, regardless of what either the DHCP
 # server returns or what the reverse DNS entry for the IP is, uncomment
 # and adjust the following line.
-d-i netcfg/hostname string cbpp
+d-i netcfg/hostname string
 
 # Disable that annoying WEP key dialog.
 d-i netcfg/wireless_wep string
@@ -99,8 +99,9 @@ d-i hw-detect/load_firmware boolean true
 # If you select ftp, the mirror/country string does not need to be set.
 # Default value for the mirror protocol: http.
 #d-i mirror/protocol string ftp
-d-i mirror/country string manual
-d-i mirror/http/hostname string http.us.debian.org
+d-i mirror/country string Russia
+d-i mirror/http/mirror select deb.debian.org
+d-i mirror/http/hostname string deb.debian.org
 d-i mirror/http/directory string /debian
 d-i mirror/http/proxy string
 
@@ -121,10 +122,11 @@ d-i mirror/http/proxy string
 #d-i passwd/root-password-again password r00tme
 # or encrypted using a crypt(3)  hash.
 #d-i passwd/root-password-crypted password [crypt(3) hash]
+d-i passwd/root-login boolean false
 
 # To create a normal user account.
-#d-i passwd/user-fullname string Debian User
-#d-i passwd/username string debian
+d-i passwd/user-fullname string
+d-i passwd/username string debian
 # Normal user's password, either in clear text
 #d-i passwd/user-password password insecure
 #d-i passwd/user-password-again password insecure
@@ -161,18 +163,18 @@ d-i clock-setup/ntp boolean true
 # name must be given in traditional, non-devfs format (so e.g. /dev/sda
 # and not e.g. /dev/discs/disc0/disc).
 # For example, to use the first SCSI/SATA hard disk:
-d-i partman-auto/disk string /dev/sda
+#d-i partman-auto/disk string /dev/sda
 # In addition, you'll need to specify the method to use.
 # The presently available methods are:
 # - regular: use the usual partition types for your architecture
 # - lvm:     use LVM to partition the disk
 # - crypto:  use LVM within an encrypted partition
-d-i partman-auto/method string lvm
+d-i partman-auto/method string regular
 
 # You can define the amount of space that will be used for the LVM volume
 # group. It can either be a size with its unit (eg. 20 GB), a percentage of
 # free space or the 'max' keyword.
-d-i partman-auto-lvm/guided_size string max
+#d-i partman-auto-lvm/guided_size string max
 
 # If one of the disks that are going to be automatically partitioned
 # contains an old LVM configuration, the user will normally receive a
@@ -188,7 +190,7 @@ d-i partman-lvm/confirm_nooverwrite boolean true
 # - atomic: all files in one partition
 # - home:   separate /home partition
 # - multi:  separate /home, /var, and /tmp partitions
-d-i partman-auto/choose_recipe select home
+d-i partman-auto/choose_recipe select atomic
 
 # Or provide a recipe of your own...
 # If you have a way to get a recipe file into the d-i environment, you can
@@ -311,7 +313,7 @@ d-i partman/confirm_nooverwrite boolean true
 # Configure APT to not install recommended packages by default. Use of this
 # option can result in an incomplete system and should only be used by very
 # experienced users.
-d-i base-installer/install-recommends boolean true
+d-i base-installer/install-recommends boolean false
 
 # The kernel image (meta) package to be installed; "none" can be used if no
 # kernel is to be installed.
@@ -365,19 +367,19 @@ d-i apt-setup/contrib boolean true
 
 # Or choose to not get the tasksel dialog displayed at all (and don't install
 # any packages):
-#d-i pkgsel/run_tasksel boolean false
+d-i pkgsel/run_tasksel boolean false
 
 # Individual additional packages to install
 #d-i pkgsel/include string openssh-server build-essential
 # Whether to upgrade packages after debootstrap.
 # Allowed values: none, safe-upgrade, full-upgrade
-d-i pkgsel/upgrade select safe-upgrade
+d-i pkgsel/upgrade select full-upgrade
 
 # You can choose, if your system will report back on what software you have
 # installed, and what software you use. The default is not to report back,
 # but sending reports helps the project determine what software is most
 # popular and should be included on the first CD/DVD.
-#popularity-contest popularity-contest/participate boolean false
+popularity-contest popularity-contest/participate boolean false
 
 ### Boot loader installation
 # Grub is the boot loader (for x86).
@@ -393,17 +395,17 @@ d-i grub-installer/with_other_os boolean true
 
 # Due notably to potential USB sticks, the location of the primary drive can
 # not be determined safely in general, so this needs to be specified:
-#d-i grub-installer/bootdev  string /dev/sda
+#d-i grub-installer/bootdev string /dev/sda
 # To install to the primary device (assuming it is not a USB stick):
-#d-i grub-installer/bootdev  string default
+d-i grub-installer/bootdev string default
 
 # Alternatively, if you want to install to a location other than the UEFI
 # parition/boot record, uncomment and edit these lines:
 #d-i grub-installer/only_debian boolean false
 #d-i grub-installer/with_other_os boolean false
-#d-i grub-installer/bootdev  string (hd0,1)
+#d-i grub-installer/bootdev string (hd0,1)
 # To install grub to multiple disks:
-#d-i grub-installer/bootdev  string (hd0,1) (hd1,1) (hd2,1)
+#d-i grub-installer/bootdev string (hd0,1) (hd1,1) (hd2,1)
 
 # Optional password for grub, either in clear text
 #d-i grub-installer/password password r00tme
@@ -429,10 +431,9 @@ d-i finish-install/reboot_in_progress note
 # which is useful in some situations.
 #d-i cdrom-detect/eject boolean false
 
-# This is how to make the installer shutdown when finished, but not
-# reboot into the installed system.
-#d-i debian-installer/exit/halt boolean true
-# This will power off the machine instead of just halting it.
+# This is how to make the installer reboot when finished.
+d-i debian-installer/exit/reboot boolean true
+# This will power off the machine instead of just rebooting it.
 #d-i debian-installer/exit/poweroff boolean true
 
 ### Preseeding other packages
