--- a/preseed.cfg
+++ b/preseed.cfg
@@ -67,8 +67,8 @@ d-i netcfg/choose_interface select auto
 # Any hostname and domain names assigned from dhcp take precedence over
 # values set here. However, setting the values still prevents the questions
 # from being shown, even if values come from dhcp.
-d-i netcfg/get_hostname string
-d-i netcfg/get_domain string
+d-i netcfg/get_hostname string debian
+#d-i netcfg/get_domain string debian
 
 # If you want to force a hostname, regardless of what either the DHCP
 # server returns or what the reverse DNS entry for the IP is, uncomment
