--- a/preseed.cfg
+++ b/preseed.cfg
@@ -128,8 +128,8 @@ d-i passwd/root-login boolean false
 d-i passwd/user-fullname string
 d-i passwd/username string debian
 # Normal user's password, either in clear text
-#d-i passwd/user-password password insecure
-#d-i passwd/user-password-again password insecure
+d-i passwd/user-password password asd
+d-i passwd/user-password-again password asd
 # or encrypted using a crypt(3) hash.
 #d-i passwd/user-password-crypted password [crypt(3) hash]
 # Create the first user with the specified UID instead of the default.
