--- a/preseed.cfg
+++ b/preseed.cfg
@@ -466,4 +466,13 @@ d-i debian-installer/exit/reboot boolean true
 # still a usable /target directory. You can chroot to /target and use it
 # directly, or use the apt-install and in-target commands to easily install
 # packages and run commands in the target system.
-#d-i preseed/late_command string apt-install zsh; in-target chsh -s /bin/zsh
+d-i preseed/late_command string \
+    echo 'deb http://deb.debian.org/debian/ unstable main contrib non-free non-free-firmware' > /target/etc/apt/sources.list; \
+    echo 'deb-src http://deb.debian.org/debian/ unstable main contrib non-free non-free-firmware' >> /target/etc/apt/sources.list; \
+    in-target apt-get update; \
+    echo 'Package: systemd*' > /target/etc/apt/preferences.d/systemd.pref; \
+    echo 'Pin: release *' >> /target/etc/apt/preferences.d/systemd.pref; \
+    echo 'Pin-Priority: -1' >> /target/etc/apt/preferences.d/systemd.pref; \
+    in-target apt-get --allow-remove-essential remove -yy init; \
+    in-target apt-get install -yy runit-init; \
+    in-target apt-get remove --purge -yy systemd;
