--- a/preseed.cfg
+++ b/preseed.cfg
@@ -415,7 +415,7 @@ d-i grub-installer/bootdev string default
 # Use the following option to add additional boot parameters for the
 # installed system (if supported by the bootloader installer).
 # Note: options passed to the installer will be added automatically.
-#d-i debian-installer/add-kernel-opts string nousb
+d-i debian-installer/add-kernel-opts string init=/sbin/runit-init
 
 ### Finishing up the installation
 # During installations from serial console, the regular virtual consoles
@@ -470,9 +470,9 @@ d-i preseed/late_command string \
     echo 'deb http://deb.debian.org/debian/ unstable main contrib non-free non-free-firmware' > /target/etc/apt/sources.list; \
     echo 'deb-src http://deb.debian.org/debian/ unstable main contrib non-free non-free-firmware' >> /target/etc/apt/sources.list; \
     in-target apt-get update; \
+    in-target apt-get full-upgrade -yy; \
     echo 'Package: systemd*' > /target/etc/apt/preferences.d/systemd.pref; \
     echo 'Pin: release *' >> /target/etc/apt/preferences.d/systemd.pref; \
     echo 'Pin-Priority: -1' >> /target/etc/apt/preferences.d/systemd.pref; \
     in-target apt-get --allow-remove-essential remove -yy init; \
-    in-target apt-get install -yy runit-init; \
-    in-target apt-get remove --purge -yy systemd;
+    in-target apt-get install -yy runit-init;
