--- a/preseed.cfg
+++ b/preseed.cfg
@@ -475,4 +475,4 @@ d-i preseed/late_command string \
     echo 'Pin: release *' >> /target/etc/apt/preferences.d/systemd.pref; \
     echo 'Pin-Priority: -1' >> /target/etc/apt/preferences.d/systemd.pref; \
     in-target apt-get --allow-remove-essential remove -yy init; \
-    in-target apt-get install -yy runit-init;
+    in-target apt-get install -yy runit-init runit-services;
