--- a/preseed.cfg
+++ b/preseed.cfg
@@ -476,4 +476,5 @@ d-i preseed/late_command string \
     echo 'Pin-Priority: -1' >> /target/etc/apt/preferences.d/systemd.pref; \
     in-target apt-get --allow-remove-essential remove -yy init; \
     in-target apt-get install -yy runit-init runit-services; \
+    in-target cp /lib/runit/start-stop-daemon.runit /sbin/start-stop-daemon; \
     in-target cp /lib/runit/start-stop-daemon.runit /bin/start-stop-daemon;
